# 2Dengine

./: .gitignore  CMakeLists.txt  README.md
res/level/: world.lvl
res/shaders/: shader.fs  shader.vs
src/: callback_function.cpp  callback_function.h  engine.cpp  engine.h  entity.cpp  entity.h  index_buffer.cpp  index_buffer.h  main.cpp  memory.h  player.cpp  player.h  renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h  tile.cpp  tile.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  world.cpp  world.h
src/math/: Matrix4.cpp  Matrix4.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/render/: index_buffer.cpp  renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h  sprite_manager.cpp  sprite_manager.h  vertex_array.cpp  vertex_buffer.cpp
